--- a/manifest_firefox.json
+++ b/manifest_firefox.json
@@ -27,6 +27,7 @@
     "scripts": [
       "app.js",
       "/background/browser-action-proxy.js",
+      "/background/external-action-proxy.js",
       "/background/content-proxy.js",
       "/background/background.js",
       "/background/omni.js"
@@ -45,7 +46,7 @@
     ]
   }],
   "omnibox": {
-    "keyword" : "find"
+    "keyword": "find"
   },
   "commands": {
     "_execute_browser_action": {
